[package]
name = "esm-parser"
version = "0.2.1"
authors = ["tRuTrIx <trutrix@monocyte.host>", "StealthOfKing <sok@monocyte.host>"]
edition = "2021"
description = "ESM file parser"

[dependencies]
chunk-parser = { git = "https://github.com/StealthOfKing/rust-chunk-parser.git" }
esm-bindings = { git = "https://github.com/trutrix/esm-bindings.git" }

[dev-dependencies]
assert_cmd = "2.0"

[[bin]]
name = "esm-parser"
