[package]
name = "esm-parser"
version = "0.2.3"
authors = ["tRuTrIx <trutrix@monocyte.host>", "StealthOfKing <sok@monocyte.host>"]
edition = "2021"
description = "ESM file parser"

[dependencies]
flate2 = "1.0.34"
chunk-parser = { git = "https://github.com/StealthOfKing/rust-chunk-parser.git" }
esm-bindings = { path = "../esm-bindings" }

[dev-dependencies]
assert_cmd = "2.0"

[[bin]]
name = "esm-parser"
